Custom--app/main/default/objects/SmartyStreets_Configuration__c/SmartyStreets_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SmartyStreets Configuration</label>
</CustomObject>