Custom--app/main/default/objects/SmartyStreets_Configuration__c/fields/Auth_ID__c.field-meta.xml
<CustomField>
    <fullName>Auth_ID__c</fullName>
    <label>Auth ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>