Custom--app/main/default/objects/SmartyStreets_Configuration__c/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <label>Auth Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>