Custom--app/main/default/objects/SmartyStreets_Configuration__c/fields/Cloudbees_Endpoint_Url__c.field-meta.xml
<CustomField>
    <fullName>Cloudbees_Endpoint_Url__c</fullName>
    <label>Cloudbees Endpoint Url</label>
    <type>Url</type>
</CustomField>