Custom--app/main/default/objects/SmartyStreets_Configuration__c/fields/ProdOrgRoot__c.field-meta.xml
<CustomField>
    <fullName>ProdOrgRoot__c</fullName>
    <label>ProdOrgRoot</label>
    <length>12</length>
    <type>Text</type>
</CustomField>