Custom--app/main/default/objects/SmartyStreets_Configuration__c/fields/SmartyStreetsActive__c.field-meta.xml
<CustomField>
    <fullName>SmartyStreetsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartyStreetsActive</label>
    <type>Checkbox</type>
</CustomField>